panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__struct__test_error_bitfields.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/struct/test_error_bitfields.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: cannot take address of this expression because it is a bitfield member
   ╭─[panko/tests/cases/struct/test_error_bitfields.c:7:17]
   │
 7 │     int* ptr = &s.x;
   │                 ─┬─  
   │                  ╰─── this expression is a bitfield member
───╯
